2022-01-23  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/assert.h: Require semicolon after macros

2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.2.0 released

	* configure.ac: Made stable
	* include/kernaux/cmdline.h: Made stable

2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>

	* README.md: Configuration options now follow semver
	* include/kernaux/assert.h: Do not allow to disable asserts and guards

2022-01-21  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Allow to disable unnecessary heavy binary data

2022-01-20  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/assert.h: Added unconditional assertion (panic)
	* include/kernaux/assert.h: Added guards for unconditional assertion (panic)
	* src/printf.c: Fix bug and actually enable floating-point arithmetics

2022-01-20  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.1.0 released