@@ -35,6 +35,7 @@ AC_ARG_WITH(  [units],        AS_HELP_STRING([--without-units],       [without m
 
 dnl Packages (disabled by default)
 AC_ARG_WITH(  [libc],         AS_HELP_STRING([--with-libc],           [with libc replacement]))
+AC_ARG_WITH(  [libc-isdigit], AS_HELP_STRING([--with-libc-isdigit],   [with isdigit replacement]))
 AC_ARG_WITH(  [libc-memset],  AS_HELP_STRING([--with-libc-memset],    [with memset replacement]))
 AC_ARG_WITH(  [libc-strcpy],  AS_HELP_STRING([--with-libc-strcpy],    [with strcpy replacement]))
 AC_ARG_WITH(  [libc-strlen],  AS_HELP_STRING([--with-libc-strlen],    [with strlen replacement]))
@@ -59,6 +60,7 @@ AS_IF([test "$with_all" = no], do_without_all)
 
 AC_DEFUN([do_with_libc],
 [
+if test -z "$with_libc_isdigit"; then with_libc_isdigit=yes; fi
 if test -z "$with_libc_memset";  then with_libc_memset=yes;  fi
 if test -z "$with_libc_strcpy";  then with_libc_strcpy=yes;  fi
 if test -z "$with_libc_strlen";  then with_libc_strlen=yes;  fi
@@ -100,6 +102,7 @@ AM_CONDITIONAL([WITH_PRINTF],       [test "$with_printf"       != no])
 AM_CONDITIONAL([WITH_UNITS],        [test "$with_units"        != no])
 
 dnl Packages (disabled by default)
+AM_CONDITIONAL([WITH_LIBC_ISDIGIT], [test "$with_libc_isdigit" = yes])
 AM_CONDITIONAL([WITH_LIBC_MEMSET],  [test "$with_libc_memset"  = yes])
 AM_CONDITIONAL([WITH_LIBC_STRCPY],  [test "$with_libc_strcpy"  = yes])
 AM_CONDITIONAL([WITH_LIBC_STRLEN],  [test "$with_libc_strlen"  = yes])
@@ -132,6 +135,7 @@ AS_IF([test "$with_printf"       != no], [AC_DEFINE([WITH_PRINTF],           [1]
 AS_IF([test "$with_units",       != no], [AC_DEFINE([WITH_UNITS],            [1], [with measurement units utils])])
 
 dnl Packages (disabled by default)
+AS_IF([test "$with_libc_isdigit" = yes], [AC_DEFINE([WITH_LIBC_ISDIGIT],     [1], [with isdigit replacement])])
 AS_IF([test "$with_libc_memset"  = yes], [AC_DEFINE([WITH_LIBC_MEMSET],      [1], [with memset replacement])])
 AS_IF([test "$with_libc_strcpy"  = yes], [AC_DEFINE([WITH_LIBC_STRCPY],      [1], [with strcpy replacement])])
 AS_IF([test "$with_libc_strlen"  = yes], [AC_DEFINE([WITH_LIBC_STRLEN],      [1], [with strlen replacement])])
