@@ -7,6 +7,10 @@ extern "C" {
 
 #include <stddef.h>
 
+// <ctype.h>
+int isdigit(int c);
+
+// <string.h>
 void *memset(void *s, int c, size_t n);
 char *strcpy(char *dest, const char *src);
 size_t strlen(const char *s);
