@@ -1,6 +1,7 @@
 2022-01-23  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/assert.h: Require semicolon after macros
+	* include/kernaux/libc.h: Add func "isdigit"
 
 2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>
 
